html 기본 뼈대 작업

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
                 <a href="#">남자의류</a>
                 <ul class="subcategories">
                     <li><a href="#">아우터</a></li>
-                    <li><a href="#">상의</a></li>
+                    <li>
+                      <a href="#">상의</a>
+                      <ul class="sub-subcategories">
+                        <li><a href="#">맨투맨</a></li>
+                        <li><a href="#">니트</a></li>
+                        <!-- 다른 하위 하위 카테고리 항목 추가 -->
+                      </ul>
+                    </li>
                     <li><a href="#">하의</a></li>
                 </ul>
             </li>
@@ -41,13 +48,6 @@
             </li>
         </ul>
     </aside>
-
-    <main>
-        <section id="subcategories">
-            <!-- 여기에 하위 세부 카테고리 내용이 나갈 것입니다. -->
-        </section>
-    </main>
-
     <script src="script.js"></script>
 </body>
 </html>
