--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="root1">
     <aside id="categories">
         <ul>
             <li>
@@ -48,6 +49,7 @@
             </li>
         </ul>
     </aside>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
