--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="root1">
+  <div id="root1">
+    <h1>HOME</h1>
     <aside id="categories">
         <ul>
             <li>
