스타일링 추가

--- a/index.html
+++ b/index.html
@@ -7,23 +7,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="root0">
+  <h1 id="home">HOME</h1>
+  <div class="mainimage"></div>
+  </div>
   <div id="root1">
-    <h1>HOME</h1>
     <aside id="categories">
         <ul>
             <li>
                 <a href="#">남자의류</a>
                 <ul class="subcategories">
-                    <li><a href="#">아우터</a></li>
+                    <li>
+                      <a href="#">아우터</a>
+                      <ul class="sub-subcategories">
+                        <li><a href="#">코트</a></li>
+                        <li><a href="#">패딩</a></li>
+                      </ul>
+                    </li>
                     <li>
                       <a href="#">상의</a>
                       <ul class="sub-subcategories">
                         <li><a href="#">맨투맨</a></li>
                         <li><a href="#">니트</a></li>
-                        <!-- 다른 하위 하위 카테고리 항목 추가 -->
                       </ul>
                     </li>
-                    <li><a href="#">하의</a></li>
+                    <li>
+                      <a href="#">하의</a>
+                      <ul class="sub-subcategories">
+                        <li><a href="#">청바지</a></li>
+                        <li><a href="#">슬랙스</a></li>
+                      </ul>
+                    </li>
                 </ul>
             </li>
             <li>
