슬라이더 스타일링

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
         </ul>
     </aside>
   </div>
+  <div class="slider-container">
+    <div class="slide">
+        <img src="image1.jpg" alt="이미지 1">
+    </div>
+    <div class="slide">
+        <img src="image2.jpg" alt="이미지 2">
+    </div>
+    <div class="slide">
+        <img src="image3.jpg" alt="이미지 3">
+    </div>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
