서브페이지 토대 작성

--- a/subpages/subpage1.html
+++ b/subpages/subpage1.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>의류 쇼핑몰</title>
+    <title>상품 리스트</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="root0">
-  <h1 id="home">HOME</h1>
-  <div class="mainimage"></div>
-  </div>
-  <div id="root1">
-    <aside id="categories">
-        <ul>
+    <div id="root0">
+        <h1 id="home">HOME</h1>
+        <div class="mainimage"></div>
+    </div>
+    <div id="root1">
+        <aside id="categories">
+          <ul>
             <li>
                 <a href="#">남자의류</a>
                 <ul class="subcategories">
@@ -63,19 +63,11 @@
                 </ul>
             </li>
         </ul>
-    </aside>
-  </div>
-  <div class="slider-container">
-    <div class="slide">
-        <img src="image1.jpg" alt="이미지 1">
+        </aside>
     </div>
-    <div class="slide">
-        <img src="image2.jpg" alt="이미지 2">
+    <div class="product-list">
+        <!-- 여기에 상품 리스트가 표시될 것입니다. -->
     </div>
-    <div class="slide">
-        <img src="image3.jpg" alt="이미지 3">
-    </div>
-  </div>
     <script src="script.js"></script>
 </body>
 </html>
