상품 가격순 정렬 기능 구현

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <img src="image3.jpg" alt="이미지 3">
     </div>
   </div>
+  <div class="random-products">
+    <!-- 랜덤 상품 목록이 이곳에 동적으로 추가될 것입니다. -->
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
