--- a/subpages/subpage1.html
+++ b/subpages/subpage1.html
@@ -65,8 +65,13 @@
         </ul>
         </aside>
     </div>
-    <div class="product-list">
-        <!-- 여기에 상품 리스트가 표시될 것입니다. -->
+    <label for="sortDirection">가격 정렬: </label>
+    <select id="sortDirection">
+      <option value="ascending">가격 오름차순</option>
+      <option value="descending">가격 내림차순</option>
+    </select>
+        <div class="product-list">
+      <!-- 여기에 상품 리스트가 표시될 것입니다. -->
     </div>
     <script src="script.js"></script>
 </body>
